# routes/api/user.js
@@ -19,6 +19,6 @@ router.patch("/verify/:verificationToken", verifyEmail);
 router.post("/signin", validateBody(signinSchema), signin);
 router.get("/current", auth, currentUser);
 router.get("/logout", auth, logout);
-router.put("/update", auth, validateBody(updateUserSchema), update);
+router.patch("/update", auth, validateBody(updateUserSchema), update);
 
 module.exports = router;
